# signal_filtration

./: CMakeLists.txt  README.md  data_samples.txt  filtered_output.txt  main.c  plot.py
include/file_handler/: fileHandler.h
include/filter/: filterConvolution.h
include/utilities/: utilities.h
source/file_handler/: fileHandler.c
source/filter/: filterConvolution.c
source/utilities/: utilities.c
